[package]
name = "ai-quick-error"
description = "A no_std fork of quick-error"
license = "MIT/Apache-2.0"
version = "2.0.1"
edition = "2018"
keywords = ["macro", "error", "type", "enum"]
authors = ["Paul Colomiets <paul@colomiets.name>", "Colin Kiegel <kiegel@gmx.de>"]
homepage = "http://github.com/atom-planet-embrace/quick-error"
repository = "http://github.com/atom-planet-embrace/quick-error"
documentation = "http://docs.rs/ai-quick-error"
categories = ["rust-patterns"]
